Update Android SDK manager dependencies (#1107)
Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>